sasql/tests/compile_fail/comment_only.rs
fn main() {
    let _ = sasql::query!("-- just a comment");
}
